--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "outDir": "build"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "build"
   ],
   "include": [
     "**/*.ts"
