--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hellomouse/eslint-config-typescript": "^1.1.11",
     "collections": "^5.1.11",
     "minecraft-protocol": "^1.13.0",
+    "vec3": "^0.1.5",
     "winston": "^3.3.3"
   },
   "devDependencies": {
